fixed spacing issue with projects grid responsive design

--- a/src/styles/components/projects-grid.css
+++ b/src/styles/components/projects-grid.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, 400px);
   margin-top: 5em;
-  justify-content: space-between;
+  justify-content: start;
   gap: 2em;
 }
 
@@ -43,9 +43,16 @@
   color: var(--colo-black);
 }
 
+@media screen and (max-width: 865px) {
+  .projects-grid {
+    justify-content: center;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .project {
     max-width: 270px;
+    margin: auto;
   }
 
   .project .image-container {
